# Personal-library

library-manager/: pyproject.toml
library-manager/src/library_manager/: __init__.py  main.py
