[project]
name = "library-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "farahmuzaffar", email = "164481851+farahmuzaffar@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
]

[project.scripts]
library-manager = "library_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
